Working with line Circles

--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
         class="circle"></span> <span class="circle"></span> <span class="circle"></span> <span class="circle"></span>
       <span class="circle"></span> <span class="circle"></span> <span class="circle"></span> <span
         class="circle"></span> <span class="circle"></span> <span class="circle"></span> <span class="circle"></span>
-      <button class="addCircleBtn">Click</button><button class="addCircleBtn">Click</button><button
-        class="addCircleBtn">Click</button><button class="addCircleBtn">Click</button><button
-        class="addCircleBtn">Click</button><button class="addCircleBtn">Click</button><button
-        class="addCircleBtn">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(35)">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(36)">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(37)">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(38)">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(39)">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(40)">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(41)">Click</button>
     </div>
   </main>
 </body>
