--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
         class="circle"></span> <span class="circle"></span> <span class="circle"></span> <span class="circle"></span>
       <span class="circle"></span> <span class="circle"></span> <span class="circle"></span> <span
         class="circle"></span> <span class="circle"></span> <span class="circle"></span> <span class="circle"></span>
-      <button class="addCircleBtn" onclick="addCircle(35)">Click</button>
-      <button class="addCircleBtn" onclick="addCircle(36)">Click</button>
-      <button class="addCircleBtn" onclick="addCircle(37)">Click</button>
-      <button class="addCircleBtn" onclick="addCircle(38)">Click</button>
-      <button class="addCircleBtn" onclick="addCircle(39)">Click</button>
-      <button class="addCircleBtn" onclick="addCircle(40)">Click</button>
-      <button class="addCircleBtn" onclick="addCircle(41)">Click</button>
+      <span class="circle"></span> <span class="circle"></span> <span class="circle"></span> <span
+        class="circle"></span> <span class="circle"></span> <span class="circle"></span> <span class="circle"></span>
+      <button class="addCircleBtn" onclick="addCircle(42)">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(43)">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(44)">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(45)">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(46)">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(47)">Click</button>
+      <button class="addCircleBtn" onclick="addCircle(48)">Click</button>
     </div>
   </main>
 </body>
